# xtclim

./: .flake8  .gitignore  AUTHORS.md  Dockerfile  README.md  Requirements.txt  code_of_conduct.md  codemeta.json  config.yaml  pipeline.yaml  pyproject.toml  pytest.ini  setup.cfg  train.py  xtclim.json
.github/linters/: .jscpd.json  .markdownlint.json  .ruff.toml
.github/workflows/: check-links.yml  ci.yml  lint.yml
code_carbon/: emissions.csv
etc/: xtclim.json
input/: dates_histo_data.csv  dates_proj_data.csv  dates_test_data.csv  dates_train_data.csv
notebooks/: preprocess_functions_1d_temp_members.ipynb  presentation_notebook.ipynb
outputs/: cvae_model_3d.pth  cvae_model_autumn_1d.pth  cvae_model_autumn_1d_1memb.pth  cvae_model_autumn_3d.pth  cvae_model_spring_1d.pth  cvae_model_spring_1d_1memb.pth  cvae_model_spring_3d.pth  cvae_model_summer_1d.pth  cvae_model_summer_1d_1memb.pth  cvae_model_summer_3d.pth  cvae_model_winter_1d.pth  cvae_model_winter_1d_1memb.pth  cvae_model_winter_3d.pth  proj126_losses_autumn_1d_1memb.csv  proj126_losses_autumn_1d_allssp.csv  proj126_losses_spring_1d_1memb.csv  proj126_losses_spring_1d_allssp.csv  proj126_losses_summer_1d_1memb.csv  proj126_losses_summer_1d_allssp.csv  proj126_losses_winter_1d_1memb.csv  proj126_losses_winter_1d_allssp.csv  proj245_losses_autumn_1d_1memb.csv  proj245_losses_autumn_1d_allssp.csv  proj245_losses_spring_1d_1memb.csv  proj245_losses_spring_1d_allssp.csv  proj245_losses_summer_1d_1memb.csv  proj245_losses_summer_1d_allssp.csv  proj245_losses_winter_1d_1memb.csv  proj245_losses_winter_1d_allssp.csv  proj370_losses_autumn_1d_1memb.csv  proj370_losses_autumn_1d_allssp.csv  proj370_losses_spring_1d_1memb.csv  proj370_losses_spring_1d_allssp.csv  proj370_losses_summer_1d_1memb.csv  proj370_losses_summer_1d_allssp.csv  proj370_losses_winter_1d_1memb.csv  proj370_losses_winter_1d_allssp.csv  proj585_losses_autumn_1d_1memb.csv  proj585_losses_autumn_1d_allssp.csv  proj585_losses_spring_1d_1memb.csv  (+49 more)
preprocessing/: preprocess_2d_seasons.py  preprocess_3d_data.ipynb  preprocess_3d_seasons.ipynb  preprocess_functions_2d_ssp.py  preprocess_functions_3d_data.ipynb
preprocessing/.ipynb_checkpoints/: preprocess_3d_data-checkpoint.ipynb  preprocess_functions_3d_data-checkpoint.ipynb
src/: anomaly.py  engine.py  initialization.py  model.py  scenario_season_comparison.ipynb  train.py  utils.py
src/.ipynb_checkpoints/: anomaly_draft-checkpoint.ipynb  spatial_extent-checkpoint.ipynb  spatial_extent_draft-checkpoint.ipynb
src/itwinai/plugins/xtclim/: anomaly.py  engine.py  initialization.py  model.py  pipeline.yaml  preprocess_3d_seasons.py  preprocess_functions_2d_ssp.py  trainer.py  xtclim.py
src/itwinai/plugins/xtclim/preprocessing/: preprocess_2d_seasons.py  preprocess_3d_seasons.py  preprocess_functions_2d_ssp.py
src/itwinai/plugins/xtclim/src/: anomaly.py  engine.py  initialization.py  model.py  trainer.py  utils.py
tests/: test_1_preprocess_functions_2d_ssp.py  test_2_preprocess_2d_seasons.py  test_3_trainer.py  test_4_inference.py
