[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itwinai-xtclim-plugin"
version = "0.1.0"
requires-python = ">=3.10"
description = "xtclim plugin for itwinai"
authors = [
    { name = "Christian Page", email = "christian.page@cerfacs.fr" },
    { name = "Matteo Bunino", email = "matteo.bunino@cern.ch" },
]
dependencies = [
    "cartopy>=0.24.1",
    "cftime>=1.6.4.post1",
    "codecarbon>=2.8.3",
    "dask>=2025.2.0",
    "datetime>=5.5",
    "h5netcdf>=1.6.1",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "itwinai[torch]>=0.3.0",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "ruff>=0.9.6",
    "tqdm>=4.67.1",
    "urllib3>=1.26.13",
    "xarray>=2025.1.2",
]


[tool.setuptools.packages.find]
# Declare this package as part of the `itwinai.plugins` namespace
where = ["src"]
# Add plugin subfolders explicitly here
include = [
    "itwinai.plugins.xtclim",
    "itwinai.plugins.xtclim.src",
    "itwinai.plugins.xtclim.preprocessing",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.ipynb"]

# Ruff configuration: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
