[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itwinai-xtclim-plugin"
version = "0.1.0"
description = "xtclim plugin for itwinai"
authors = [
    { name = "Christian Page", email = "christian.page@cerfacs.fr" },
    { name = "Matteo Bunino", email = "matteo.bunino@cern.ch" },
]
dependencies = [
    "cartopy",
    "cftime",
    "codecarbon",
    "dask",
    "datetime",
    "h5netcdf",
    "imageio",
    "ipykernel",
    "itwinai[torch]",
    "matplotlib",
    "netcdf4",
    "numpy",
    "pandas",
    "ruff",
    "tqdm",
    "urllib3",
    "xarray",
    "torch",
    "torchvision"
]


[tool.setuptools.packages.find]
# Declare this package as part of the `itwinai.plugins` namespace
where = ["src"]
# Add plugin subfolders explicitly here
include = [
    "itwinai.plugins.xtclim",
    "itwinai.plugins.xtclim.src",
    "itwinai.plugins.xtclim.preprocessing",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.ipynb"]

# Ruff configuration: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 130
exclude = [
  ".git", "__pycache__", "docs/conf.py", "use-cases", "tutorials",
  "tests", "old", "build", "dist", ".venv*", "envAI*", "env-files", ".vscode"
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["itwinai.plugins.xtclim"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.coverage.xml]
output = "coverage.xml"
